src/parser.c
#include <nsql/parser.h>
#include <stdbool.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

// Forward parsing function declarations
static Node* parse_ask_query(Parser* parser);
static Node* parse_tell_query(Parser* parser);
static Node* parse_find_query(Parser* parser);
static Node* parse_show_query(Parser* parser);

static Node* parse_field_list(Parser* parser);
static Node* parse_source(Parser* parser);
static Node* parse_join(Parser* parser);
static Node* parse_condition(Parser* parser);
static Node* parse_group_by(Parser* parser);
static Node* parse_order_by(Parser* parser);
static Node* parse_limit(Parser* parser);

static Node* parse_add_action(Parser* parser);
static Node* parse_remove_action(Parser* parser);
static Node* parse_update_action(Parser* parser);
static Node* parse_create_action(Parser* parser);
static Node* parse_record_spec(Parser* parser);
static Node* parse_field_def(Parser* parser);
static Node* parse_constraint(Parser* parser);

static Node* parse_expression(Parser* parser);
static Node* parse_logic_or(Parser* parser);
static Node* parse_logic_and(Parser* parser);
static Node* parse_equality(Parser* parser);
static Node* parse_comparison(Parser* parser);
static Node* parse_term(Parser* parser);
static Node* parse_factor(Parser* parser);
static Node* parse_unary(Parser* parser);
static Node* parse_primary(Parser* parser);
static Node* parse_function_call(Parser* parser);

// Util functions
static void        advance(Parser* parser);
static bool        check(Parser* parser, NsqlTokenType type);
static bool        match(Parser* parser, NsqlTokenType type);
static void        consume(Parser* parser, NsqlTokenType type, const char* message);
static void        error_at_current(Parser* parser, const char* message);
static void        error_at(Parser* parser, Token* token, const char* message);
static void        synchronize(Parser* parser);
static Node*       create_node(NodeType type);
static char*       copy_token_string(Token* token);
static const char* token_type_to_op_string(NsqlTokenType type);

/**
 * @brief Formats all parser errors into a single string.
 *
 * Writes a human-readable summary of all errors encountered during parsing into the provided
 * buffer.
 *
 * @param buffer Destination buffer for the formatted error string.
 * @param size Size of the destination buffer in bytes.
 * @return Number of bytes written to the buffer, excluding the null terminator.
 */
size_t parser_format_errors(Parser* parser, char* buffer, size_t size) {
    return format_errors(&parser->errors, buffer, size);
}

/**
 * Formats all parser errors into a JSON string.
 *
 * Writes a JSON representation of the parser's collected errors into the provided buffer.
 *
 * @param buffer Destination buffer for the JSON output.
 * @param size Size of the buffer in bytes.
 * @return Number of bytes written to the buffer, excluding the null terminator.
 */
size_t parser_format_errors_json(Parser* parser, char* buffer, size_t size) {
    return format_errors_json(&parser->errors, buffer, size);
}

/**
 * @brief Initializes a parser for NSQL input using the provided lexer.
 *
 * Sets up the parser state, resets error tracking, initializes the error context, and advances to
 * the first token.
 */
void parser_init(Parser* parser, Lexer* lexer) {
    parser->lexer      = lexer;
    parser->had_error  = false;
    parser->panic_mode = false;

    // Initialize error context
    error_context_init(&parser->errors);

    // Prime the parser with the first token
    advance(parser);
}

/**
 * Frees resources associated with the parser, including its error context.
 *
 * Call this function to release memory allocated for parser error tracking after parsing is
 * complete.
 */
void parser_free(Parser* parser) {
    // Free error context
    error_context_free(&parser->errors);
}

/**
 * Advance the parser to the next token.
 *
 * @param parser The parser instance.
 */
static void advance(Parser* parser) {
    parser->previous = parser->current;

    for (;;) {
        parser->current = lexer_next_token(parser->lexer);
        if (parser->current.type != TOKEN_ERROR)
            break;

        error_at_current(parser, parser->current.start);
    }
}

/**
 * @brief Determines if the current token matches the specified type.
 *
 * @param type The token type to check against the current token.
 * @return true if the current token is of the given type, false otherwise.
 */
static bool check(Parser* parser, NsqlTokenType type) {
    return parser->current.type == type;
}

/**
 * Consumes the current token if it matches the specified type.
 *
 * @param type The token type to match against the current token.
 * @return true if the token was matched and consumed; false otherwise.
 */
static bool match(Parser* parser, NsqlTokenType type) {
    if (!check(parser, type))
        return false;
    advance(parser);
    return true;
}

/**
 * @brief Consumes the current token if it matches the expected type, or reports an error.
 *
 * Advances the parser if the current token matches the specified type; otherwise, reports a parsing
 * error with the given message.
 */
static void consume(Parser* parser, NsqlTokenType type, const char* message) {
    if (parser->current.type == type) {
        advance(parser);
        return;
    }

    error_at_current(parser, message);
}

/**
 * Report error at current token.
 *
 * @param parser The parser instance.
 * @param message The error message.
 */
static void error_at_current(Parser* parser, const char* message) {
    error_at(parser, &parser->current, message);
}

/**
 * Reports a parsing error at the specified token, records it in the parser's error context, and
 * initiates error recovery.
 *
 * Sets the parser into panic mode to prevent cascading errors and triggers synchronization to
 * recover from the error state.
 */
static void error_at(Parser* parser, Token* token, const char* message) {
    if (parser->panic_mode)
        return;
    parser->panic_mode = true;
    parser->had_error  = true;

    // Report the error to the error context
    report_error(&parser->errors, ERROR_ERROR, ERROR_SOURCE_PARSER, token->line,
                 token->length > 0
                     ? (int)(token->start - lexer_get_line_start(parser->lexer, token->line))
                     : 0,
                 message);

    // Print to stderr for immediate debugging
    fprintf(stderr, "[line %d] Error", token->line);

    if (token->type == TOKEN_EOF) {
        fprintf(stderr, " at end");
    } else if (token->type == TOKEN_ERROR) {
        // Nothing
    } else {
        fprintf(stderr, " at '%.*s'", (int)token->length, token->start);
    }

    fprintf(stderr, ": %s\n", message);

    // Sync after error
    synchronize(parser);
}

/**
 * Synchronize the parser after an error.
 *
 * Compile with -DENABLE_SYNC_RECOVERY=OFF to disable this feature.
 *
 * @param parser The parser instance.
 */
static void synchronize(Parser* parser) {
#ifdef ENABLE_SYNC_RECOVERY
    parser->panic_mode = false;

    while (parser->current.type != TOKEN_EOF) {
        // Skip until we find a query start keyword
        switch (parser->current.type) {
            case TOKEN_ASK:
            case TOKEN_TELL:
            case TOKEN_FIND:
            case TOKEN_SHOW:
            case TOKEN_GET:
                return;
            default:;  // Do nothing
        }

        advance(parser);
    }
#else
    parser->panic_mode = false;
#endif
}

/**
 * Create a new AST node of the specified type.
 *
 * @param type The type of the node to create.
 * @return A pointer to the newly created node.
 */
static Node* create_node(NodeType type) {
    Node* node = (Node*)malloc(sizeof(Node));
    if (node == NULL) {
        fprintf(stderr, "Error: Out of memory\n");
        exit(EXIT_FAILURE);
    }
    memset(node, 0, sizeof(Node));
    node->type = type;
    return node;
}

/**
 * Copy token string to a new memory location.
 *
 * @param token The token to copy.
 */
static char* copy_token_string(Token* token) {
    char* str = (char*)malloc(token->length + 1);
    if (str == NULL) {
        fprintf(stderr, "Error: Out of memory\n");
        exit(EXIT_FAILURE);
    }

    memcpy(str, token->start, token->length);
    str[token->length] = '\0';
    return str;
}

/**
 * @brief Returns the string representation of an operator token type.
 *
 * Converts a given NsqlTokenType representing an operator to its corresponding string form (e.g.,
 * "+", "AND", "!=").
 *
 * @param type The operator token type.
 * @return The string representation of the operator, or "UNKNOWN" if not recognized.
 */
static const char* token_type_to_op_string(NsqlTokenType type) {
    switch (type) {
        case TOKEN_PLUS:
            return "+";
        case TOKEN_MINUS:
            return "-";
        case TOKEN_STAR:
            return "*";
        case TOKEN_SLASH:
            return "/";
        case TOKEN_PERCENT:
            return "%";
        case TOKEN_EQUAL:
            return "=";
        case TOKEN_GT:
            return ">";
        case TOKEN_LT:
            return "<";
        case TOKEN_GTE:
            return ">=";
        case TOKEN_LTE:
            return "<=";
        case TOKEN_NEQ:
            return "!=";
        case TOKEN_LIKE:
            return "LIKE";
        case TOKEN_AND:
            return "AND";
        case TOKEN_OR:
            return "OR";
        case TOKEN_NOT:
            return "NOT";
        default:
            return "UNKNOWN";
    }
}

/**
 * Parse NSQL query and return the AST root.
 *
 * @param parser The parser instance.
 */
Node* parse_query(Parser* parser) {
    if (match(parser, TOKEN_ASK)) {
        return parse_ask_query(parser);
    } else if (match(parser, TOKEN_TELL)) {
        return parse_tell_query(parser);
    } else if (match(parser, TOKEN_FIND)) {
        return parse_find_query(parser);
    } else if (match(parser, TOKEN_SHOW)) {
        return parse_show_query(parser);
    } else if (match(parser, TOKEN_GET)) {
        return parse_show_query(parser);
    }

    error_at_current(parser, "Expected a query type (ASK, TELL, FIND, SHOW, GET)");
    return NULL;
}

// TODO: Shove all of the conditionals into one function, so as to not repeat code

/**
 * Parse ASK query.
 *
 * @param parser The parser instance.
 * @return The AST node representing the ASK query.
 */
static Node* parse_ask_query(Parser* parser) {
    Node* node = create_node(NODE_ASK_QUERY);
    node->line = parser->previous.line;

    // Parse source
    node->as.ask_query.source = parse_source(parser);

    // Parse FOR clause
    consume(parser, TOKEN_FOR, "Expected 'FOR' after source in ASK query");

    // Parse field list
    node->as.ask_query.fields = parse_field_list(parser);

    // Parse optional condition
    if (match(parser, TOKEN_WHEN) || match(parser, TOKEN_IF) || match(parser, TOKEN_WHERE)) {
        node->as.ask_query.condition = parse_condition(parser);
    } else {
        node->as.ask_query.condition = NULL;
    }

    // Parse optional GROUP BY
    if (match(parser, TOKEN_GROUP)) {
        consume(parser, TOKEN_BY, "Expected 'BY' after 'GROUP'");
        node->as.ask_query.group_by = parse_group_by(parser);
    } else {
        node->as.ask_query.group_by = NULL;
    }

    // Parse optional ORDER BY / SORT BY
    if ((match(parser, TOKEN_ORDER) && match(parser, TOKEN_BY)) ||
        (match(parser, TOKEN_SORT) && match(parser, TOKEN_BY))) {
        node->as.ask_query.order_by = parse_order_by(parser);
    } else {
        node->as.ask_query.order_by = NULL;
    }

    // Parse optional LIMIT
    if (match(parser, TOKEN_LIMIT)) {
        node->as.ask_query.limit = parse_limit(parser);
    } else {
        node->as.ask_query.limit = NULL;
    }

    return node;
}

/**
 * Parse TELL query.
 *
 * @param parser The parser instance.
 * @return The AST node representing the TELL query.
 */
static Node* parse_tell_query(Parser* parser) {
    Node* node = create_node(NODE_TELL_QUERY);
    node->line = parser->previous.line;

    // Parse source
    node->as.tell_query.source = parse_source(parser);

    // Parse TO
    consume(parser, TOKEN_TO, "Expected 'TO' after source in TELL query");

    // Parse action
    if (match(parser, TOKEN_ADD)) {
        node->as.tell_query.action = parse_add_action(parser);
    } else if (match(parser, TOKEN_REMOVE)) {
        node->as.tell_query.action = parse_remove_action(parser);
    } else if (match(parser, TOKEN_UPDATE)) {
        node->as.tell_query.action = parse_update_action(parser);
    } else if (match(parser, TOKEN_CREATE)) {
        node->as.tell_query.action = parse_create_action(parser);
    } else {
        error_at_current(parser, "Expected action (ADD, REMOVE, UPDATE, CREATE)");
        return NULL;
    }

    // Parse optional condition
    if (match(parser, TOKEN_WHEN) || match(parser, TOKEN_IF) || match(parser, TOKEN_WHERE)) {
        node->as.tell_query.condition = parse_condition(parser);
    } else {
        node->as.tell_query.condition = NULL;
    }

    return node;
}

/**
 * Parse FIND query.
 *
 * @param parser The parser instance.
 * @return The AST node representing the FIND query.
 */
static Node* parse_find_query(Parser* parser) {
    Node* node = create_node(NODE_FIND_QUERY);
    node->line = parser->previous.line;

    // Parse fields
    if (check(parser, TOKEN_IDENTIFIER)) {
        // Fields explicitly specified
        // In FIND queries, the fields are implicit in the source
        node->as.find_query.source = parse_source(parser);
    } else {
        // No fields specified, use implicit source
        Node* source_node = create_node(NODE_SOURCE);
        source_node->line = parser->previous.line;

        // Create an implicit "*" identifier
        Node* id_node                 = create_node(NODE_IDENTIFIER);
        id_node->line                 = parser->previous.line;
        id_node->as.identifier.name   = strdup("*");
        id_node->as.identifier.length = 1;

        source_node->as.source.identifier = id_node;
        source_node->as.source.join       = NULL;

        node->as.find_query.source = source_node;
    }

    // Parse IN if present
    if (match(parser, TOKEN_IN)) {
        // Replace the source
        Node* old_source           = node->as.find_query.source;
        node->as.find_query.source = parse_source(parser);
        free_node(old_source);
    }

    // Parse condition
    if (match(parser, TOKEN_THAT) || match(parser, TOKEN_WHEN) || match(parser, TOKEN_WHERE) ||
        match(parser, TOKEN_WHICH)) {
        node->as.find_query.condition = parse_condition(parser);
    } else {
        node->as.find_query.condition = NULL;
    }

    // Parse optional GROUP BY
    if (match(parser, TOKEN_GROUP)) {
        consume(parser, TOKEN_BY, "Expected 'BY' after 'GROUP'");
        node->as.find_query.group_by = parse_group_by(parser);
    } else {
        node->as.find_query.group_by = NULL;
    }

    // Parse optional ORDER BY / SORT BY
    if ((match(parser, TOKEN_ORDER) && match(parser, TOKEN_BY)) ||
        (match(parser, TOKEN_SORT) && match(parser, TOKEN_BY))) {
        node->as.find_query.order_by = parse_order_by(parser);
    } else {
        node->as.find_query.order_by = NULL;
    }

    // Parse optional LIMIT
    if (match(parser, TOKEN_LIMIT)) {
        node->as.find_query.limit = parse_limit(parser);
    } else {
        node->as.find_query.limit = NULL;
    }

    return node;
}

/**
 * Parse SHOW query.
 *
 * @param parser The parser instance.
 * @return The AST node representing the SHOW query.
 */
static Node* parse_show_query(Parser* parser) {
    Node* node = create_node(NODE_SHOW_QUERY);
    node->line = parser->previous.line;

    // Skip optional ME
    match(parser, TOKEN_IDENTIFIER);  // Just consume "ME" if present

    // Parse field list
    node->as.show_query.fields = parse_field_list(parser);

    // Parse FROM
    consume(parser, TOKEN_FROM, "Expected 'FROM' after fields in SHOW query");

    // Parse source
    node->as.show_query.source = parse_source(parser);

    // Parse optional condition
    if (match(parser, TOKEN_WHEN) || match(parser, TOKEN_IF) || match(parser, TOKEN_WHERE)) {
        node->as.show_query.condition = parse_condition(parser);
    } else {
        node->as.show_query.condition = NULL;
    }

    // Parse optional GROUP BY
    if (match(parser, TOKEN_GROUP)) {
        consume(parser, TOKEN_BY, "Expected 'BY' after 'GROUP'");
        node->as.show_query.group_by = parse_group_by(parser);
    } else {
        node->as.show_query.group_by = NULL;
    }

    // Parse optional ORDER BY / SORT BY
    if ((match(parser, TOKEN_ORDER) && match(parser, TOKEN_BY)) ||
        (match(parser, TOKEN_SORT) && match(parser, TOKEN_BY))) {
        node->as.show_query.order_by = parse_order_by(parser);
    } else {
        node->as.show_query.order_by = NULL;
    }

    // Parse optional LIMIT
    if (match(parser, TOKEN_LIMIT)) {
        node->as.show_query.limit = parse_limit(parser);
    } else {
        node->as.show_query.limit = NULL;
    }

    return node;
}

#if 0
/**
 * Parse GET query
 *
 * @param parser The parser instance.
 * @return The AST node representing the GET query.
 */
static Node* parse_get_query(Parser* parser) {
    Node* node = create_node(NODE_GET_QUERY);
    node->line = parser->previous.line;

    // Parse field list
    node->as.get_query.fields = parse_field_list(parser);

    // Parse FROM
    consume(parser, TOKEN_FROM, "Expected 'FROM' after fields in GET query");

    // Parse source
    node->as.get_query.source = parse_source(parser);

    // Parse optional condition
    if (match(parser, TOKEN_WHEN) || match(parser, TOKEN_IF) || match(parser, TOKEN_WHERE)) {
        node->as.get_query.condition = parse_condition(parser);
    } else {
        node->as.get_query.condition = NULL;
    }

    // Parse optional GROUP BY
    if (match(parser, TOKEN_GROUP)) {
        consume(parser, TOKEN_BY, "Expected 'BY' after 'GROUP'");
        node->as.get_query.group_by = parse_group_by(parser);
    } else {
        node->as.get_query.group_by = NULL;
    }

    // Parse optional ORDER BY / SORT BY
    if ((match(parser, TOKEN_ORDER) && match(parser, TOKEN_BY)) ||
        (match(parser, TOKEN_SORT) && match(parser, TOKEN_BY))) {
        node->as.get_query.order_by = parse_order_by(parser);
    } else {
        node->as.get_query.order_by = NULL;
    }

    // Parse optional LIMIT
    if (match(parser, TOKEN_LIMIT)) {
        node->as.get_query.limit = parse_limit(parser);
    } else {
        node->as.get_query.limit = NULL;
    }

    return node;
}
#endif

/**
 * Parse field list.
 *
 * @param parser The parser instance.
 * @return The AST node representing the field list.
 */
static Node* parse_field_list(Parser* parser) {
    Node* node = create_node(NODE_FIELD_LIST);
    node->line = parser->previous.line;

    // Allocate initial space for fields
    int capacity               = 4;
    node->as.field_list.fields = (Node**)malloc(capacity * sizeof(Node*));
    if (node->as.field_list.fields == NULL) {
        fprintf(stderr, "Error: Out of memory\n");
        exit(EXIT_FAILURE);
    }

    node->as.field_list.count = 0;

    // Parse first field
    if (check(parser, TOKEN_IDENTIFIER) || check(parser, TOKEN_STRING)) {
        Node* field                 = create_node(NODE_IDENTIFIER);
        field->line                 = parser->current.line;
        field->as.identifier.length = parser->current.length;
        field->as.identifier.name   = copy_token_string(&parser->current);

        node->as.field_list.fields[node->as.field_list.count++] = field;
        advance(parser);

        // Parse additional fields separated by commas
        while (match(parser, TOKEN_COMMA)) {
            if (node->as.field_list.count >= capacity) {
                capacity *= 2;
                node->as.field_list.fields =
                    (Node**)realloc(node->as.field_list.fields, capacity * sizeof(Node*));
                if (node->as.field_list.fields == NULL) {
                    fprintf(stderr, "Error: Out of memory\n");
                    exit(EXIT_FAILURE);
                }
            }

            if (check(parser, TOKEN_IDENTIFIER) || check(parser, TOKEN_STRING)) {
                field                       = create_node(NODE_IDENTIFIER);
                field->line                 = parser->current.line;
                field->as.identifier.length = parser->current.length;
                field->as.identifier.name   = copy_token_string(&parser->current);

                node->as.field_list.fields[node->as.field_list.count++] = field;
                advance(parser);
            } else {
                error_at_current(parser, "Expected identifier or string after comma");
                break;
            }
        }
    } else {
        error_at_current(parser, "Expected identifier or string for field list");
    }

    return node;
}

/**
 * Parse a source.
 *
 * @param parser The parser instance.
 * @return The AST node representing the source.
 */
static Node* parse_source(Parser* parser) {
    Node* node = create_node(NODE_SOURCE);
    node->line = parser->previous.line;

    // Parse identifier or string
    if (check(parser, TOKEN_IDENTIFIER) || check(parser, TOKEN_STRING)) {
        node->as.source.identifier                       = create_node(NODE_IDENTIFIER);
        node->as.source.identifier->line                 = parser->current.line;
        node->as.source.identifier->as.identifier.length = parser->current.length;
        node->as.source.identifier->as.identifier.name   = copy_token_string(&parser->current);

        advance(parser);

        // Check for JOIN
        if (match(parser, TOKEN_AND) || match(parser, TOKEN_WITH)) {
            node->as.source.join = parse_join(parser);
        } else {
            node->as.source.join = NULL;
        }
    } else {
        error_at_current(parser, "Expected identifier or string for source");
    }

    return node;
}

/**
 * Parse WITH (JOIN) clause.
 *
 * @param parser The parser instance.
 * @return The AST node representing the JOIN clause.
 */
static Node* parse_join(Parser* parser) {
    Node* node = create_node(NODE_JOIN);
    node->line = parser->previous.line;

    // Parse the joined source
    node->as.join.source = parse_source(parser);

    // Parse join condition
    if (match(parser, TOKEN_WHEN) || match(parser, TOKEN_WHERE)) {
        node->as.join.condition = parse_condition(parser);
    } else {
        error_at_current(parser, "Expected 'WHEN' or 'WHERE' after join source");
    }

    return node;
}

/**
 * Parse condition (WHERE clause).
 *
 * @param parser The parser instance.
 * @return The AST node representing the condition.
 */
static Node* parse_condition(Parser* parser) {
    return parse_expression(parser);
}

/**
 * Parse GROUP BY clause.
 *
 * @param parser The parser instance.
 * @return The AST node representing the GROUP BY clause.
 */
static Node* parse_group_by(Parser* parser) {
    Node* node = create_node(NODE_GROUP_BY);
    node->line = parser->previous.line;

    // Parse fields to group by
    node->as.group_by.fields = parse_field_list(parser);

    // Parse optional HAVING clause
    if (match(parser, TOKEN_HAVING)) {
        node->as.group_by.having = parse_condition(parser);
    } else {
        node->as.group_by.having = NULL;
    }

    return node;
}

/**
 * Parse ORDER BY / SORT BY clause.
 *
 * @param parser The parser instance.
 * @return The AST node representing the ORDER BY / SORT BY clause.
 */
static Node* parse_order_by(Parser* parser) {
    Node* node = create_node(NODE_ORDER_BY);
    node->line = parser->previous.line;

    // Allocate initial space for sort fields
    int capacity                = 4;
    node->as.order_by.fields    = (Node**)malloc(capacity * sizeof(Node*));
    node->as.order_by.ascending = (bool*)malloc(capacity * sizeof(bool));

    if (node->as.order_by.fields == NULL || node->as.order_by.ascending == NULL) {
        fprintf(stderr, "Error: Out of memory\n");
        exit(EXIT_FAILURE);
    }

    node->as.order_by.count = 0;

    // Parse first field
    if (check(parser, TOKEN_IDENTIFIER)) {
        Node* field                 = create_node(NODE_IDENTIFIER);
        field->line                 = parser->current.line;
        field->as.identifier.length = parser->current.length;
        field->as.identifier.name   = copy_token_string(&parser->current);

        node->as.order_by.fields[node->as.order_by.count] = field;

        // Default to ascending order
        node->as.order_by.ascending[node->as.order_by.count] = true;

        advance(parser);

        // Check for ASC/DESC
        if (match(parser, TOKEN_IDENTIFIER)) {
            // Compare with "ASC" or "DESC"
            if (parser->previous.length == 3 && strncmp(parser->previous.start, "ASC", 3) == 0) {
                node->as.order_by.ascending[node->as.order_by.count] = true;
            } else if (parser->previous.length == 4 &&
                       strncmp(parser->previous.start, "DESC", 4) == 0) {
                node->as.order_by.ascending[node->as.order_by.count] = false;
            } else {
                // Not ASC or DESC, must be another field
                error_at_current(parser, "Expected 'ASC', 'DESC', or ','");
            }
        }

        node->as.order_by.count++;

        // Parse additional sort fields
        while (match(parser, TOKEN_COMMA)) {
            if (node->as.order_by.count >= capacity) {
                capacity *= 2;
                node->as.order_by.fields =
                    (Node**)realloc(node->as.order_by.fields, capacity * sizeof(Node*));
                node->as.order_by.ascending =
                    (bool*)realloc(node->as.order_by.ascending, capacity * sizeof(bool));
                if (node->as.order_by.fields == NULL || node->as.order_by.ascending == NULL) {
                    fprintf(stderr, "Error: Out of memory\n");
                    exit(EXIT_FAILURE);
                }
            }

            if (check(parser, TOKEN_IDENTIFIER)) {
                field                       = create_node(NODE_IDENTIFIER);
                field->line                 = parser->current.line;
                field->as.identifier.length = parser->current.length;
                field->as.identifier.name   = copy_token_string(&parser->current);

                node->as.order_by.fields[node->as.order_by.count] = field;

                // Default to ascending order
                node->as.order_by.ascending[node->as.order_by.count] = true;

                advance(parser);

                // Check for ASC/DESC
                if (match(parser, TOKEN_IDENTIFIER)) {
                    // Compare with "ASC" or "DESC"
                    if (parser->previous.length == 3 &&
                        strncmp(parser->previous.start, "ASC", 3) == 0) {
                        node->as.order_by.ascending[node->as.order_by.count] = true;
                    } else if (parser->previous.length == 4 &&
                               strncmp(parser->previous.start, "DESC", 4) == 0) {
                        node->as.order_by.ascending[node->as.order_by.count] = false;
                    } else {
                        // Not ASC or DESC, must be another field
                        error_at_current(parser, "Expected 'ASC', 'DESC', or ','");
                    }
                }

                node->as.order_by.count++;
            } else {
                error_at_current(parser, "Expected identifier after comma in ORDER BY clause");
                break;
            }
        }
    } else {
        error_at_current(parser, "Expected identifier for ORDER BY clause");
    }

    return node;
}

/**
 * Parse LIMIT clause.
 *
 * @param parser The parser instance.
 * @return The AST node representing the LIMIT clause.
 */
static Node* parse_limit(Parser* parser) {
    Node* node = create_node(NODE_LIMIT);
    node->line = parser->previous.line;

    // Parse limit value
    if (check(parser, TOKEN_INTEGER)) {
        char* end;
        node->as.limit.limit = (int)strtol(parser->current.start, &end, 10);
        advance(parser);
    } else {
        error_at_current(parser, "Expected integer for LIMIT clause");
    }

    // Parse optional OFFSET
    if (match(parser, TOKEN_IDENTIFIER) && parser->previous.length == 6 &&
        strncmp(parser->previous.start, "OFFSET", 6) == 0) {
        if (check(parser, TOKEN_INTEGER)) {
            char* end;
            node->as.limit.offset = (int)strtol(parser->current.start, &end, 10);
            advance(parser);
        } else {
            error_at_current(parser, "Expected integer for OFFSET clause");
        }
    } else {
        node->as.limit.offset = 0;
    }

    return node;
}

/**
 * Parse ADD action.
 *
 * @param parser The parser instance.
 * @return The AST node representing the ADD action.
 */
static Node* parse_add_action(Parser* parser) {
    Node* node = create_node(NODE_ADD_ACTION);
    node->line = parser->previous.line;

    // Parse value to add
    node->as.add_action.value = parse_expression(parser);

    // Parse optional record specifications
    if (match(parser, TOKEN_WITH)) {
        node->as.add_action.record_spec = parse_record_spec(parser);
    } else {
        node->as.add_action.record_spec = NULL;
    }

    return node;
}

/**
 * Parse REMOVE action.
 *
 * @param parser The parser instance.
 * @return The AST node representing the REMOVE action.
 */
static Node* parse_remove_action(Parser* parser) {
    Node* node = create_node(NODE_REMOVE_ACTION);
    node->line = parser->previous.line;

    // Parse optional condition (if no condition, remove all)
    if (check(parser, TOKEN_WHEN) || check(parser, TOKEN_IF) || check(parser, TOKEN_WHERE)) {
        node->as.remove_action.condition = parse_condition(parser);
    } else {
        node->as.remove_action.condition = NULL;
    }

    return node;
}

/**
 * Parse UPDATE action.
 *
 * @param parser The parser instance.
 * @return The AST node representing the UPDATE action.
 */
static Node* parse_update_action(Parser* parser) {
    Node* node = create_node(NODE_UPDATE_ACTION);
    node->line = parser->previous.line;

    // Allocate initial space for field/value pairs
    int capacity                  = 4;
    node->as.update_action.fields = (Node**)malloc(capacity * sizeof(Node*));
    node->as.update_action.values = (Node**)malloc(capacity * sizeof(Node*));

    if (node->as.update_action.fields == NULL || node->as.update_action.values == NULL) {
        fprintf(stderr, "Error: Out of memory\n");
        exit(EXIT_FAILURE);
    }

    node->as.update_action.count = 0;

    // Parse first field=value pair
    if (check(parser, TOKEN_IDENTIFIER)) {
        Node* field                 = create_node(NODE_IDENTIFIER);
        field->line                 = parser->current.line;
        field->as.identifier.length = parser->current.length;
        field->as.identifier.name   = copy_token_string(&parser->current);

        node->as.update_action.fields[node->as.update_action.count] = field;

        advance(parser);
        consume(parser, TOKEN_EQUAL, "Expected '=' after field name");

        node->as.update_action.values[node->as.update_action.count] = parse_expression(parser);
        node->as.update_action.count++;

        // Parse additional field=value pairs
        while (match(parser, TOKEN_COMMA)) {
            if (node->as.update_action.count >= capacity) {
                capacity *= 2;
                node->as.update_action.fields =
                    (Node**)realloc(node->as.update_action.fields, capacity * sizeof(Node*));
                node->as.update_action.values =
                    (Node**)realloc(node->as.update_action.values, capacity * sizeof(Node*));
                if (node->as.update_action.fields == NULL ||
                    node->as.update_action.values == NULL) {
                    fprintf(stderr, "Error: Out of memory\n");
                    exit(EXIT_FAILURE);
                }
            }

            if (check(parser, TOKEN_IDENTIFIER)) {
                field                       = create_node(NODE_IDENTIFIER);
                field->line                 = parser->current.line;
